5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4130/executions/1822_3184.log
== TEST (2019-06-13 10:02:42) 
-- CODE:
from numpy import *

v = array(eval(input("Digite: ")))

for i in range(6)
	print(i)
-- ERROR:
File "XXXX", line 5
    for i in range(6)
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:02:47) 
-- CODE:
from numpy import *

v = array(eval(input("Digite: ")))

for i in range(6):
	print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:15:44) 
-- CODE:
from numpy import *

v = array(eval(input("Digite: ")))

for i in range(6):
	print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 10:30:08) 
-- CODE:
from numpy import *

v = array(eval(input("Digite: ")))

for i in range(6):
	print(i)
-- EXECUTION TIME:
0.971514
-- TEST CASE 1:
---- input:
['x','p','m','k','e','c','a']
---- correct output:
['a' 'c' 'e' 'k' 'm' 'p' 'x']
---- user output:
0
1
2
3
4
5
-- TEST CASE 2:
---- input:
['f','e','e','d','c','b','a']
---- correct output:
['a' 'b' 'c' 'd' 'e' 'e' 'f']
---- user output:
0
1
2
3
4
5
-- TEST CASE 3:
---- input:
['n','l','k','i','e','b']
---- correct output:
['b' 'e' 'i' 'k' 'l' 'n']
---- user output:
0
1
2
3
4
5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
